--- a/OpenCNCPilot/Properties/Settings.settings
+++ b/OpenCNCPilot/Properties/Settings.settings
@@ -174,5 +174,8 @@ G92Z0;</Value>
     <Setting Name="ProbeOffsetY" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="StreamURL" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
