--- a/OpenCNCPilot/packages.config
+++ b/OpenCNCPilot/packages.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net48" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net48" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net48" />
+  <package id="AForge.Video.FFMPEG" version="2.2.5" targetFramework="net48" />
+  <package id="FFMpegCore" version="5.1.0" targetFramework="net48" />
   <package id="HelixToolkit" version="2.11.0" targetFramework="net461" />
   <package id="HelixToolkit.Wpf" version="2.11.0" targetFramework="net461" />
+  <package id="Instances" version="3.0.0" targetFramework="net48" />
   <package id="martin2250.Calculator" version="1.0.0" targetFramework="net471" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
